--- a/EXAM_TORCH/DAY_01/ex_tensor_01.ipynb
+++ b/EXAM_TORCH/DAY_01/ex_tensor_01.ipynb
@@ -1492,12 +1492,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "53aa99df",
+   "cell_type": "markdown",
+   "id": "dfe532ce",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### PyTorch 파일 수정입니다."
+   ]
   }
  ],
  "metadata": {
